--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 entsoe-py~=0.6.7
+matplotlib~=3.8.3
+numpy~=1.26.4
 ortools~=9.9.3963
 pandas~=2.2.1
 pandera~=0.18.3
 python-dotenv~=1.0.1
+streamlit~=1.33.0
